Fixed issue 42692 : Fixed receipt header address and label overlap issue

--- a/web/org.openbravo.retail.posterminal/css/obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/obpos-main.css
@@ -3374,6 +3374,12 @@ li.selected > .obUiRenderOrderLine_edit {
   margin: 0px;
 }
 
+.obUiOrderHeader .obUiFormElement-mainArea-label-labelLine {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .obUiFormElement_dataEntry.obUiOrderHeader-buttonComponents-formElementBplocbutton {
   /*Inherits: [OB.UI.BPLocation]*/
 }
